[TASK] several changes

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     hartwig_image_magick.twig.image_extension:
-    class: Hartwig\ImageMagickBundle\Twig\ImageExtension
-    arguments: [ "@service_container" ]
-    tags:
-        - { name: twig.extension }
+        class: Hartwig\Bundle\ImageMagickBundle\Twig\ImageExtension
+        arguments: [ "@service_container" ]
+        tags:
+            - { name: twig.extension }
